overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ p, a, input, select, option {
 	width: 0;
 	height: 0;
 	transition: all 0.5s linear;
+	overflow: hidden;
 }
 #menu-nav .navbar-nav > li > a {
     font-family: WebMitra;
